[package]
name = "rust_winapi_test"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
windows = { version = "0.56.0", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse"
]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.windows]
# version = "0.54.0"
# features = [
#     "Data_Xml_Dom",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_System_Threading",
#     "Win32_UI_WindowsAndMessaging",
#     "Win32_UI_Input",
#     "Win32_UI_Input_KeyboardAndMouseInput",
# ]
